# rust-playground

./: .env  .gitignore  404.html  Cargo.toml  README.md  bitwise.html  book.toml  concurrency.html  enum.html  error-handling.html  index.html  iterators.html  ownership.html  print.html  references.html  searchindex.js  searchindex.json  structs.html  trait-objects.html
.github/workflows/: actions-gh-pages.yml  rust.yml
alfred/: Cargo.toml  Dockerfile
alfred/src/: discord.rs  main.rs  transmission.rs
algorithms/: heap_sort.html
axum-graphql/: Cargo.toml
axum-webserver/: Cargo.toml
axum-webserver/src/: main.rs
bevy-game/: Cargo.toml  README.md
bevy-game/assets/data/: player.ron
bevy-game/data/: character_animations.ron
bevy-game/src/: animation.rs  collision.rs  cursor.rs  gamestate.rs  main.rs  menu.rs  physics.rs  player.rs  snake.rs  states.rs
bevy-snake/: Cargo.toml
bevy-snake/src/: README.md  main.rs
blog/src/: lib.rs
book/: book.toml  ownership.html  references.html  searchindex.js  structs.html
book/smart-pointers/: ref-cell.html
book/src/: README.md  SUMMARY.md  bitwise.md  enum.md  error-handling.md  generics.md  iterators.md  ownership.md  questions.md  structs.md  vector.md  where.md  windows.md
book/src/algorithms/: heap_sort.md
book/src/concurrency/: index.md
book/src/smart-pointers/: ref-cell.md
chat-tokio/: Cargo.toml
chat-tokio/src/: main.rs
chess/: README.md
chess/src/: main.rs
codeforces/: Cargo.toml
codeforces/src/: 1555-A.rs
crates/axum-graphql/src/: main.rs
crates/axum-webserver/src/: main.rs
crates/bevy-game/: Cargo.toml
crates/bevy-game/src/: main.rs
crates/blog/src/: main.rs
crates/chat-tokio/: Cargo.toml
crates/chess/: Cargo.toml
crates/chess/src/: main.rs
crates/leetcode/src/: array.rs  banned_words.rs  binary_search.rs  datastructures_1.rs  decode_xor_array.rs  divide_two_integers.rs  easy.rs  first_bad_version.rs  generate_parentheses.rs  heap_sort.rs  insertion_sort.rs  lib.rs  move_zeroes.rs  multiple.rs  quicksort.rs
crates/minigrep/: Cargo.toml
crates/minigrep/src/: lib.rs  main.rs
crates/orst/src/: insertionsort.rs  lib.rs
crates/sorting/src/: heap.rs
crates/termie/: Cargo.toml
crates/type-driven-api/src/: main.rs
crates/vulkan-2d-game/: Cargo.toml
crates/wasm/src/: main.rs
crates/workout/: Cargo.toml
crates/yew-app/: index.html
ethereum/: Cargo.toml
ethereum/src/: main.rs
finance/: Cargo.toml
gui/src/: lib.rs  main.rs
leetcode/src/: add_two_numbers.rs  array.rs  banned_words.rs  binary_search.rs  datastructures_1.rs  first_bad_version.rs  heap_sort.rs  insertion_sort.rs  lib.rs  lru_cache.rs  multiple.rs  pattern_defeating_quicksort.rs  roman_to_integer.rs  rotate_array.rs  search_insert_position.rs  sorted_squares.rs
messenger/: Cargo.toml
messenger/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
orst/: Cargo.toml
orst/src/: bubblesort.rs  insertionsort.rs  lib.rs
patterns/src/: main.rs
rocket/: Cargo.toml
rocket/src/: main.rs
smart-pointers/: box.html  index.html  ref-cell.html
sorting/src/: heap.rs
src/: README.md  add.rs  double_linked_list.rs  drop.rs  higher_rank_trait_bounds.rs  iterator.rs  jwt.rs  largest_product.rs  lib.rs  lifetime.rs  macros.rs  main.rs  messenger.rs  new_type_idiom.rs  rectangle.rs  recursion.rs  references.md  rust_is_hard.rs  search.rs  serde.rs  smart_pointers.rs  structs.rs  tiny_traits.rs  trait-objects.md  traits.rs  web_scraping.rs
src/smart-pointers/: index.md
tests/: integration_test.rs
type-driven-api/: Cargo.toml
type-driven-api/src/: main.rs
vulkan-2d-game/src/: main.rs
webserver/: Cargo.toml
webserver/src/: main.rs
workout/src/: main.rs
yew-app/: Cargo.toml
yew-app/src/: app.rs  main.rs
