[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Oscar te Giffel <oscar@tegiffel.com>"]
edition = "2018"

[workspace]
members = [
    "minigrep",
    "workout",
    "ethereum",
    "gui",
    "blog",
    "rocket",
    "chat-tokio",
    "yew-app"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"