[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Oscar te Giffel <oscar@tegiffel.com>"]
edition = "2021"


[workspace]
resolver = "2"
members = [ "crates/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
jsonwebtoken = "8.1.0"
tokio = {version = "1.17.0", features = ["full"]}
warp = "0.3.2"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
chrono = "0.4.19"
futures = "0.3.21"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.14"
hyper = "0.14.26"
dotenv = "0.15.0"
