[package]
name = "alfred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "framework", "standard_framework", "rustls_backend", "collector"]}
tokio = { version = "1.12.0", features = ["full"] }
transmission-rpc = "0.3.6"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"