[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_rapier2d = "0.16.0"
rand = "0.8.5"
core-foundation = "0.9.3"
rapier2d = "0.14.0"
serde = "1.0.142"
ron = "0.7.1"
anyhow = "1.0.60"
