[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_rapier2d = { version = "0.16.2", features = [ "debug-render" ] }
rand = "0.8.5"
core-foundation = "0.9.3"
rapier2d = "0.14.0"
serde = "1.0.142"
anyhow = "1.0.60"
bevy_common_assets = { version = "0.3.0", features = ["ron"]}
ron = "0.7.1"
