[package]
name = "ethereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
ethereum-tx-sign = "0.0.2"
ethereum-types = "0.4"
hex = "0.3.1"
tokio = { version = "1.10.1", features = ["full"] }

