[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_rapier2d = "0.22.0"
rand = "0.8.5"
core-foundation = "0.9.3"
rapier2d = "0.17.2"
serde = "1.0.142"
anyhow = "1.0.60"
bevy_common_assets = { version = "0.5.0", features = ["ron"] }
ron = "0.8.0"
